airflow/logs/dag_id=process_enrichir_clean_reviews/run_id=manual__2025-03-21T141530.077739+0000/task_id=convertir_date_relative/attempt=2.log
[2025-03-21T14:24:06.210+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2025-03-21T14:24:06.297+0000] {taskinstance.py:2614} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: process_enrichir_clean_reviews.convertir_date_relative manual__2025-03-21T14:15:30.077739+00:00 [queued]>
[2025-03-21T14:24:06.332+0000] {taskinstance.py:2614} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: process_enrichir_clean_reviews.convertir_date_relative manual__2025-03-21T14:15:30.077739+00:00 [queued]>
[2025-03-21T14:24:06.333+0000] {taskinstance.py:2867} INFO - Starting attempt 2 of 2
[2025-03-21T14:24:06.390+0000] {taskinstance.py:2890} INFO - Executing <Task(BashOperator): convertir_date_relative> on 2025-03-21 14:15:30.077739+00:00
[2025-03-21T14:24:06.409+0000] {standard_task_runner.py:72} INFO - Started process 982832 to run task
[2025-03-21T14:24:06.422+0000] {standard_task_runner.py:104} INFO - Running: ['airflow', 'tasks', 'run', 'process_enrichir_clean_reviews', 'convertir_date_relative', 'manual__2025-03-21T14:15:30.077739+00:00', '--job-id', '1915', '--raw', '--subdir', 'DAGS_FOLDER/process_clean_reviews.py', '--cfg-path', '/tmp/tmp5vhq9lja']
[2025-03-21T14:24:06.424+0000] {standard_task_runner.py:105} INFO - Job 1915: Subtask convertir_date_relative
[2025-03-21T14:24:06.628+0000] {task_command.py:467} INFO - Running <TaskInstance: process_enrichir_clean_reviews.convertir_date_relative manual__2025-03-21T14:15:30.077739+00:00 [running]> on host DESKTOP-IM7V4RI.
[2025-03-21T14:24:06.873+0000] {taskinstance.py:3134} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='process_enrichir_clean_reviews' AIRFLOW_CTX_TASK_ID='convertir_date_relative' AIRFLOW_CTX_EXECUTION_DATE='2025-03-21T14:15:30.077739+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-03-21T14:15:30.077739+00:00'
[2025-03-21T14:24:06.876+0000] {logging_mixin.py:190} INFO - Task instance is in running state
[2025-03-21T14:24:06.876+0000] {logging_mixin.py:190} INFO -  Previous state of the Task instance: queued
[2025-03-21T14:24:06.877+0000] {logging_mixin.py:190} INFO - Current task name:convertir_date_relative state:running start_date:2025-03-21 14:24:06.298740+00:00
[2025-03-21T14:24:06.877+0000] {logging_mixin.py:190} INFO - Dag name:process_enrichir_clean_reviews and current dag run status:running
[2025-03-21T14:24:06.877+0000] {taskinstance.py:732} INFO - ::endgroup::
[2025-03-21T14:24:06.880+0000] {subprocess.py:78} INFO - Tmp dir root location: /tmp
[2025-03-21T14:24:06.886+0000] {subprocess.py:88} INFO - Running command: ['/usr/bin/bash', '-c', 'python3 /home/mohammed/airflow/scripts/convertir_date_relative.py']
[2025-03-21T14:24:06.924+0000] {subprocess.py:99} INFO - Output:
[2025-03-21T14:24:07.024+0000] {subprocess.py:106} INFO -   File "/home/mohammed/airflow/scripts/convertir_date_relative.py", line 71
[2025-03-21T14:24:07.025+0000] {subprocess.py:106} INFO -     if  date_relative
[2025-03-21T14:24:07.026+0000] {subprocess.py:106} INFO -                      ^
[2025-03-21T14:24:07.026+0000] {subprocess.py:106} INFO - SyntaxError: expected ':'
[2025-03-21T14:24:07.031+0000] {subprocess.py:110} INFO - Command exited with return code 1
[2025-03-21T14:24:07.074+0000] {taskinstance.py:3313} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 768, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 734, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 424, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/operators/bash.py", line 276, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2025-03-21T14:24:07.088+0000] {logging_mixin.py:190} INFO - Task instance in failure state
[2025-03-21T14:24:07.088+0000] {logging_mixin.py:190} INFO - Task start:2025-03-21 14:24:06.298740+00:00 end:2025-03-21 14:24:07.085765+00:00 duration:0.787025
[2025-03-21T14:24:07.089+0000] {logging_mixin.py:190} INFO - Task:<Task(BashOperator): convertir_date_relative> dag:<DAG: process_enrichir_clean_reviews> dagrun:<DagRun process_enrichir_clean_reviews @ 2025-03-21 14:15:30.077739+00:00: manual__2025-03-21T14:15:30.077739+00:00, state:running, queued_at: 2025-03-21 14:15:30.525110+00:00. externally triggered: True>
[2025-03-21T14:24:07.089+0000] {logging_mixin.py:190} INFO - Failure caused by Bash command failed. The command returned a non-zero exit code 1.
[2025-03-21T14:24:07.090+0000] {taskinstance.py:1226} INFO - Marking task as FAILED. dag_id=process_enrichir_clean_reviews, task_id=convertir_date_relative, run_id=manual__2025-03-21T14:15:30.077739+00:00, execution_date=20250321T141530, start_date=20250321T142406, end_date=20250321T142407
[2025-03-21T14:24:07.187+0000] {taskinstance.py:341} INFO - ::group::Post task execution logs
[2025-03-21T14:24:07.187+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 1915 for task convertir_date_relative (Bash command failed. The command returned a non-zero exit code 1.; 982832)
Traceback (most recent call last):
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/utils/cli.py", line 116, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 3006, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 274, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 3161, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 3185, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 768, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 734, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 424, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/mohammed/venv/lib/python3.11/site-packages/airflow/operators/bash.py", line 276, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2025-03-21T14:24:07.247+0000] {local_task_job_runner.py:266} INFO - Task exited with return code 1
[2025-03-21T14:24:07.289+0000] {taskinstance.py:3901} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-03-21T14:24:07.294+0000] {local_task_job_runner.py:245} INFO - ::endgroup::
